<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:onClick="qcbProfilePicture_OnClick" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:descendantFocusability="afterDescendants"
            android:duplicateParentState="true" >

            <com.usefeeling.android.cabinstill.widgets.MolengoTextView
                android:id="@+id/tvInfoProfilePicture"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/margin_left"
                android:layout_weight="1"
                android:clickable="true"
                android:contentDescription="@string/image_content_description"
                android:drawableTop="@drawable/ic_contact_picture"
                android:gravity="center"
                android:text="@string/info_profile_picture"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/etName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="3"
                android:ems="10"
                android:hint="@string/name_hint"
                android:inputType="textPersonName" />
        </LinearLayout>

        <EditText
            android:id="@+id/etBirthDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="@string/birth_date_hint"
            android:inputType="date" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/etGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top"
            android:ems="10"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="@string/gender_hint" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top"
            android:ems="10"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress" />

        <com.usefeeling.android.cabinstill.widgets.MolengoTextView
            android:id="@+id/tvInfoMobilePhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_left"
            android:layout_marginTop="@dimen/margin_top"
            android:text="@string/info_mobile_phone"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/etMobilePhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/mobile_phone_hint"
            android:inputType="phone" />

        <TextView
            android:id="@+id/tvLastPositionTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_left"
            android:layout_marginTop="@dimen/margin_top"
            android:text="@string/info_password"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password_hint"
            android:inputType="textPassword" />

        <CheckBox
            android:id="@+id/cbShowPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/show_password" />

        <CheckBox
            android:id="@+id/cbTos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top"
            android:clickable="false"
            android:focusableInTouchMode="true"
            android:gravity="center" />

        <com.usefeeling.android.cabinstill.widgets.OrbitronTextView
            android:id="@+id/tvTos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:gravity="center"
            android:onClick="tvTos_OnClick"
            android:paddingLeft="20dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/usefeeling_green"
            android:textStyle="bold|italic" />

        <Button
            android:id="@+id/bCreateAccount"
            style="@style/UseFeelingButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top"
            android:text="@string/create_account" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />
    </LinearLayout>

</ScrollView>