<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <com.usefeeling.android.cabinstill.widgets.OrbitronTextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_bottom"
            android:text="@string/what_you_wanna_do" />

        <com.usefeeling.android.cabinstill.widgets.OrbitronTextView
            android:id="@+id/ctvNow"
            style="@style/UseFeelingTransparentButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:clickable="true"
            android:padding="20dp"
            android:text="@string/___now" />

        <com.usefeeling.android.cabinstill.widgets.OrbitronTextView
            android:id="@+id/ctvToday"
            style="@style/UseFeelingTransparentButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:clickable="true"
            android:padding="20dp"
            android:text="@string/___today" />

        <com.usefeeling.android.cabinstill.widgets.OrbitronTextView
            android:id="@+id/ctvLater"
            style="@style/UseFeelingTransparentButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:clickable="true"
            android:padding="20dp"
            android:text="@string/___later" />

        <com.usefeeling.android.cabinstill.widgets.OrbitronTextView
            android:id="@+id/ctvFamous"
            style="@style/UseFeelingTransparentButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:padding="20dp"
            android:text="@string/only_the_most_famous" />

        <com.usefeeling.android.cabinstill.widgets.OrbitronTextView
            android:id="@+id/ctvEverything"
            style="@style/UseFeelingTransparentButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:padding="20dp"
            android:text="@string/show_me_everything" />
    </LinearLayout>

</ScrollView>
