<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:onClick="qcbProfilePicture_OnClick" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:descendantFocusability="afterDescendants"
            android:duplicateParentState="true" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_botton"
                android:layout_weight="1"
                android:clickable="true"
                android:descendantFocusability="afterDescendants"
                android:duplicateParentState="true"
                android:longClickable="false"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/qcbProfilePicture"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:clickable="true"
                    android:contentDescription="@string/image_content_description"
                    android:duplicateParentState="true"
                    android:onClick="qcbProfilePicture_OnClick"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_contact_picture" />

                <com.usefeeling.android.cabinstill.widgets.MolengoTextView
                    android:id="@+id/tvInfoProfilePicture"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_left"
                    android:clickable="false"
                    android:gravity="center"
                    android:text="@string/info_profile_picture"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textSize="12sp" />

            </LinearLayout>

            <EditText
                android:id="@+id/etName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:ems="10"
                android:hint="@string/name_hint"
                android:inputType="textPersonName" />

        </LinearLayout>

        <EditText
            android:id="@+id/etBirthDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="@string/birth_date_hint"
            android:inputType="date"
            android:onClick="etBirthDate_OnClick" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/etGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top"
            android:ems="10"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="@string/gender_hint"
            android:onClick="etGender_OnClick" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top"
            android:ems="10"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress" />

        <com.usefeeling.android.cabinstill.widgets.MolengoTextView
            android:id="@+id/tvInfoMobilePhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_left"
            android:layout_marginTop="@dimen/margin_top"
            android:text="@string/info_mobile_phone"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/etMobilePhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/mobile_phone_hint"
            android:inputType="phone" />

        <Button
            android:id="@+id/bEditProfile"
            style="@style/UseFeelingButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top"
            android:onClick="bEditProfile_OnClick"
            android:text="@string/edit_profile" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />

    </LinearLayout>

</ScrollView>