<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/usefeeling_green" >

    <com.usefeeling.android.cabinstill.widgets.NeuropolTextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="18dp"
        android:clickable="true"
        android:onClick="tvTitle_OnClick"
        android:text="@string/usefeeling"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <com.usefeeling.android.cabinstill.widgets.OrbitronTextView
        android:id="@+id/tvDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="31dp"
        android:clickable="true"
        android:onClick="tvDescription_OnClick"
        android:text="@string/usefeeling_copyright_year"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <com.usefeeling.android.cabinstill.widgets.MolengoTextView
        android:id="@+id/tvLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvDescription"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp"
        android:autoLink="web"
        android:clickable="false"
        android:gravity="center"
        android:text="@string/usefeeling_web"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <com.usefeeling.android.cabinstill.widgets.MolengoTextView
        android:id="@+id/tvIconsLand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tvMapIconsCollection"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:autoLink="web"
        android:clickable="false"
        android:gravity="center"
        android:text="@string/icons_land"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <com.usefeeling.android.cabinstill.widgets.MolengoTextView
        android:id="@+id/tvMapIconsCollection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ivMapIconsCollection"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="18dp"
        android:autoLink="web"
        android:clickable="false"
        android:gravity="center"
        android:text="@string/map_icons_collection"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <ImageView
        android:id="@+id/ivMapIconsCollection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="39dp"
        android:contentDescription="@string/image_content_description"
        android:src="@drawable/map_icons_collection_logo" />

    <TextView
        android:id="@+id/tvVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvTitle"
        android:layout_below="@+id/tvTitle" />

    <com.usefeeling.android.cabinstill.widgets.MolengoTextView
        android:id="@+id/tvVisualPharm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tvIconsLand"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="21dp"
        android:autoLink="web"
        android:clickable="false"
        android:gravity="center"
        android:text="@string/visualpharm"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>